--- a/public/404.html
+++ b/public/404.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>404_宽岛</title>
   <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+    .e404 { display: block; background: url('/images/404.jpg') no-repeat; width: 700px; height: 605px; margin: auto; }
+    .e404_words { width: 500px; font-size: 20px; margin: auto; }
   </style>
 </head>
 
 <body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
-  </div>
+  <a href="http://www.kuandao.com/" class="e404"></a>
+  <p class="e404_words">
+  <a href="http://www.kuandao.com/">您查看的页面不存在哦！ 请返回查看其他页面</a>
+  </p>
 </body>
 </html>
