--- a/public/500.html
+++ b/public/500.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>500_宽岛</title>
   <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+    .e500 { display: block; background: url('/images/500.gif') no-repeat; width: 700px; height: 500px; margin: auto; }
+    .e500_words { width: 500px; font-size: 20px; margin: auto; }
   </style>
 </head>
 
 <body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
-  </div>
+  <a href="http://www.kuandao.com/" class="e500"></a>
+  <p class="e500_words">
+  <a href="http://www.kuandao.com/">服务器开小差去了，请稍候……</a>
+  </p>
 </body>
-</html>
