--- a/public/404.html
+++ b/public/404.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8" />
   <title>404_宽岛</title>
   <style type="text/css">
     .e404 { display: block; background: url('/images/404.jpg') no-repeat; width: 700px; height: 605px; margin: auto; }
