--- a/public/500.html
+++ b/public/500.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8" />
   <title>500_宽岛</title>
   <style type="text/css">
     .e500 { display: block; background: url('/images/500.gif') no-repeat; width: 700px; height: 500px; margin: auto; }
